# efflux

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
efflux/: __init__.py  _core.py  allow.py  effects.py  introspect.py  mypy_plugin.py
efflux/check/: baseline.py  cli.py  default_externals.py  engine.py  external_map.py  fixer.py  inference.py  model.py
skills/efflux-annotate/: SKILL.md
skills/efflux-navigate/: SKILL.md
tests/: conftest.py  test_allow.py  test_effects_model.py  test_introspect.py  test_plugin.py  test_pre_commit_hooks.py  test_readme_plugin.py
tests/check/: test_baseline.py  test_cli.py  test_default_externals.py  test_engine.py  test_external_map.py  test_external_map_integration.py  test_fixer.py  test_inference.py  test_model.py  test_readme_e2e.py
