[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "efflux"
version = "0.1.0"
description = "Make function side effects visible in return-type annotations, checked by a mypy plugin."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Tatulyan Arutyun", email = "tatulyan.haru@gmail.com" }]
keywords = ["mypy", "effects", "side-effects", "type-checking", "static-analysis", "mypy-plugin"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = ["mypy>=2.1,<3", "tomli>=2; python_version < '3.11'"]

[project.urls]
Homepage = "https://github.com/tatulian/efflux"
Repository = "https://github.com/tatulian/efflux"
Issues = "https://github.com/tatulian/efflux/issues"
Changelog = "https://github.com/tatulian/efflux/blob/main/CHANGELOG.md"

[project.optional-dependencies]
fix = ["libcst>=1.1"]

[project.scripts]
efflux = "efflux.check.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.15",
    "pre-commit>=4",
    "tomli>=2",
    "libcst>=1.1",
    "pytest-cov>=5",
    # Real third-party libraries the external-map integration tests resolve against
    # (tests/check/test_external_map_integration.py; those tests skip when absent).
    "requests>=2",
    "types-requests>=2",
    "httpx>=0.27",
    "sqlalchemy>=2",
]

[tool.hatch.build.targets.wheel]
packages = ["efflux"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF", "PT"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PT018"]

[tool.mypy]
python_version = "3.10"
plugins = ["efflux.mypy_plugin"]
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["efflux.check.engine", "efflux.mypy_plugin"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
warn_return_any = false
